2008-04-02  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #264456

	* mail-component.c: (view_changed):
	Do not count deleted junk messages when doesn't show deleted messages.

2008-04-03  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #350308

	* em-format-html-display.c: (efhd_gtkhtml_realise): Make colors only
	darker, not lighter. Use black in case someone has too dark theme.

2008-04-02  Matthew Barnes  <mbarnes@redhat.com>

	* em-composer-prefs (sig_edit_cb), (em_composer_prefs_new_signature):
	Adapt to new Bonobo-less signature editor.

	* mail-signature-editor.c:
	* mail-signature-editor.h:
	Rewrite the signature editor as a subclass of GtkhtmlEditor.
	Eliminates Bonobo from the equation.

	* em-composer-utils.c (composer_get_message),
	(em_utils_composer_send_cb), (save_draft_done),
	(em_utils_composer_save_draft_cb), (create_new_composer),
	(em_utils_compose_new_message),
	(em_utils_compose_new_message_with_mailto), (em_utils_post_to_folder),
	(em_utils_post_to_url), (edit_message), (forward_attached),
	(forward_non_attached), (reply_get_composer), (composer_set_body),
	(em_utils_reply_to_message), (post_reply_to_message):
	Adapt to new Bonobo-less composer.

	* mail-component-factory.c:
	Composer is no longer needs a Bonobo factory.

	* mail-config.c:
	Fix style pattern for EMsgComposer widgets.

2008-04-02  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #271863

	* mail-component.c: (view_changed):
	Do not count deleted junked messages to total number of messages
	with unchecked "Hide Deleted Messages" option.

2008-04-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #525508, spotted by Thomas M.

	* message-list.c (ml_tree_value_at):
	Fix a leaking CamelURL in the COL_LOCATION case.

2008-04-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #525510, patch from Thomas M.

	* message-list.c (ml_tree_value_at):
	Mark "On This Computer" for translation.

2008-03-29  Matthew Barnes  <mbarnes@redhat.com>
