@@ -1,3 +1,9 @@
+2008-04-04  Jeffrey Stedfast  <fejj@novell.com>
+
+	* em-format-html.c (efh_format_header): Need to unfold some
+	headers. Also simplified figuring out the label.
+	(efh_format_headers): Cleaned up some code.
+
 2008-04-02  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #264456
